# knitting_pattern_coloring

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: core.py  main.py  palette.py  schemas.py  session.py
backend/app/routes/: classify.py  colorize.py  palette.py
backend/tests/: test_core.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CropTile.tsx  LanguageToggle.tsx  MappingStep.tsx  ResultStep.tsx  UploadStep.tsx
frontend/src/i18n/: LanguageContext.tsx  translations.ts
